--- a/src/components/update-view/update-view.component.scss
+++ b/src/components/update-view/update-view.component.scss
@@ -64,8 +64,8 @@ form {
 				height: 35px;
 				padding: 0 1rem;
 				border-radius: 8px;
-				background-color: var(--background-color);
 				color: var(--text-color-black);
+				background-color: var(--field-color);
 			}
 		}
 	}
