--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-<div class="app" [ngClass]="{ darkmode: isDarkMode }">
+<div class="app">
 	<header>
 		<h1>{{ labelTitle }}</h1>
-
-		<div class="dropdown" *ngIf="session">
+		<div class="dropdown-menu" *ngIf="session">
 			<button>
 				<div>
 					<img *ngIf="avatarURL" [src]="avatarURL" />
@@ -14,7 +13,6 @@
 					{{ isSettingsViewVisible ? labelHome : labelAccount }}
 				</button>
 				<button (click)="signOut()">{{ labelSignOut }}</button>
-				<button (click)="setDarkModeState()">{{ labelDarkMode }}</button>
 			</div>
 		</div>
 	</header>
@@ -31,7 +29,6 @@
 				/>
 			</div>
 			<div class="placeholder-2">
-				<app-actions [inputEvents]="events" (outputTag)="setSelectedTag($event)" />
 				<app-list
 					[inputEvents]="events"
 					[inputSelectedDate]="selectedDate"
@@ -41,6 +38,20 @@
 					(outputAddEvent)="setCreatedEvent($event)"
 					(outputUpdateEvent)="setUpdatedEvent($event)"
 				/>
+			</div>
+
+			<div class="dropup-menu">
+				<div class="dropup-content">
+					<button
+						class="button"
+						[ngClass]="{ 'button-selected': tag === selectedTag }"
+						(click)="setSelectedTag(tag)"
+						*ngFor="let tag of availableTags"
+					>
+						{{ tag }}
+					</button>
+				</div>
+				<button>Lister</button>
 			</div>
 		</div>
 
