--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -155,11 +155,10 @@ footer {
 	}
 }
 
-.dropdown {
+.dropdown-menu {
 	position: relative;
 	display: inline-block;
 	width: 150px;
-	height: 70%;
 
 	& button {
 		display: flex;
@@ -169,19 +168,20 @@ footer {
 		gap: 0.5rem;
 
 		width: 100%;
-		height: 100%;
+		height: 35px;
 		padding: 0 0.5rem;
 
 		color: var(--text-color-black);
-		background-color: var(--background-color);
+		background-color: var(--midground-color);
 		font-weight: 500;
+		border-radius: 8px;
 
 		& div {
 			width: 25px;
 			aspect-ratio: 1;
 			border-radius: 50%;
 			overflow: hidden;
-			background-color: var(--midground-color);
+			background-color: var(--field-color);
 
 			& img {
 				width: 100%;
@@ -201,21 +201,82 @@ footer {
 	position: absolute;
 
 	width: 100%;
-	padding: 1rem 0.5rem;
+	padding: 1rem 0rem 0rem;
 
 	background-color: var(--midground-color);
-	box-shadow:
-		0 1px 3px rgba(0, 0, 0, 0.12),
-		0 1px 2px rgba(0, 0, 0, 0.24);
 
 	& button {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
 		width: 100%;
 		height: 40px;
-		font-weight: 500;
-		border-radius: 8px;
+		background-color: var(--field-color);
 	}
 }
 
-.dropdown:hover .dropdown-content {
+.dropdown-menu:hover {
+	& button {
+		border-radius: 8px 8px 0px 0px;
+	}
+
+	& .dropdown-content {
+		display: flex;
+		border-radius: 0px 0px 8px 8px;
+		overflow: hidden;
+
+		& button {
+			border-radius: 0;
+		}
+	}
+}
+
+.dropup-menu {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-start;
+	gap: 1rem;
+
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	padding: 2rem;
+
+	& button {
+		width: 65px;
+		aspect-ratio: 1;
+		border-radius: 50%;
+		color: var(--text-color-black);
+		background-color: var(--midground-color);
+		font-weight: 500;
+	}
+}
+
+.dropup-content {
+	display: none;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-start;
+	gap: 1rem;
+
+	& .button {
+		width: 65px;
+		aspect-ratio: 1;
+		border-radius: 50%;
+
+		color: var(--text-color-black);
+		background-color: var(--field-color);
+		font-size: 12px;
+	}
+
+	& .button-selected {
+		background-color: var(--foreground-color);
+		color: var(--text-color-white);
+	}
+}
+
+.dropup-menu:hover .dropup-content {
 	display: flex;
 }
