--- a/src/components/calendar-icon/calendar-icon.component.scss
+++ b/src/components/calendar-icon/calendar-icon.component.scss
@@ -22,8 +22,8 @@
 		flex-wrap: wrap;
 		gap: 0.5rem;
 		width: 100%;
-		height: 80%;
-		padding: 0.4rem;
+		aspect-ratio: 1;
+		padding: 0.5rem 0.5rem 1.5rem;
 	}
 
 	.square {
